--- a/style.css
+++ b/style.css
@@ -26,15 +26,17 @@ p{
 
 #practice {
   display: flex;
+  flex-wrap: wrap;
 }
 .lesson {
-  margin: 5% 1%;
+  margin: 5% 1% 1%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   background-color: #222;
   flex: 1 0 auto;
+  
 }
 
 .lesson span {
